--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,7 @@
                                             <input type="password" class="form-control form-control-user"
                                                 id="exampleInputPassword" placeholder="Contraseña">
                                         </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                        <a href="main.html" class="btn btn-primary btn-user btn-block">
                                             Ingresar
                                         </a>
                                     </form>
