--- a/html/main.html
+++ b/html/main.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <script src="http://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 
     <title>Menú</title>
 
@@ -46,28 +47,43 @@
 
             <!-- Heading -->
             <div class="sidebar-heading">
-                Acciones
+                Información Institucional
             </div>
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
                 <a class="nav-link" href="">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Menu 1</span></a>
-            </li>
-
-            <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Menu 2</span></a>
+                    <span>Estudiantes</span></a>
             </li>
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
                 <a class="nav-link" href="">
                     <i class="fas fa-fw fa-table"></i>
-                    <span>Menu 3</span></a>
+                    <span>Sedes</span></a>
+            </li>
+
+            <!-- Divider -->
+            <hr class="sidebar-divider d-none d-md-block">
+
+            <!-- Heading -->
+            <div class="sidebar-heading">
+                Más
+            </div>
+
+            <!-- Nav Item - Charts -->
+            <li class="nav-item">
+                <a class="nav-link" href="">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Testimonios</span></a>
+            </li>
+
+            <!-- Nav Item - Tables -->
+            <li class="nav-item">
+                <a class="nav-link" href="">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Contacto</span></a>
             </li>
 
             <!-- Divider -->
@@ -99,7 +115,7 @@
 
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
-                        <i class="fa fa-bars"></i>
+                        <i class="fa fa-bars">aaaaaaaaaaaaaaa</i>
                     </button>
 
                     <!-- Topbar Search -->
@@ -162,27 +178,29 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Menú</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Home - Plataforma Educativa</h6>
                                     <div class="dropdown no-arrow">
-                                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                                            aria-labelledby="dropdownMenuLink">
-                                            <div class="dropdown-header">Dropdown Header:</div>
-                                            <a class="dropdown-item" href="#">Action</a>
-                                            <a class="dropdown-item" href="#">Another action</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a class="dropdown-item" href="#">Something else here</a>
-                                        </div>
+                                        --------
                                     </div>
                                 </div>
                                 <!-- Card Body -->
                                 <div class="card-body">
-                                    <div class="chart-area">
-                                        <canvas id="myAreaChart"></canvas>
-                                    </div>
+                                    <div id="contacto">
+                                        <div id="home">
+                                            <h2>Bienvenidos a Nuestra Plataforma Educativa</h2>
+                                            <p>
+                                                Esta es una plataforma educativa en constante crecimiento, dedicada a alojar información de cientos de estudiantes.
+                                                Aquí, se generan indicadores educativos que nos permiten mejorar día a día la calidad de la educación.
+                                            </p>
+                                            <p>
+                                                Nuestro objetivo es proporcionar herramientas y datos precisos para facilitar la toma de decisiones en el ámbito educativo,
+                                                asegurando que cada estudiante reciba la atención que merece y alcance su máximo potencial.
+                                            </p>
+                                            <p>
+                                                Únete a nosotros en este viaje hacia una educación más eficaz y eficiente, donde cada día nos esforzamos por mejorar y superar
+                                                las expectativas de nuestra comunidad educativa.
+                                            </p>
+                                        </div>
                                 </div>
                             </div>
                         </div>
