--- a/html/index.html
+++ b/html/index.html
@@ -22,15 +22,14 @@
 
 </head>
 
+
 <body class="bg-gradient-primary">
 
     <div class="container">
 
         <!-- Outer Row -->
         <div class="row justify-content-center">
-
             <div class="col-xl-10 col-lg-12 col-md-9">
-
                 <div class="card o-hidden border-0 shadow-lg my-5">
                     <div class="card-body p-0">
                         <!-- Nested Row within Card Body -->
@@ -41,19 +40,17 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Bienvenido</h1>
                                     </div>
-                                    <form class="user">
+                                    <form class="user" method="POST" action="main.php">
                                         <div class="form-group">
                                             <input type="text" class="form-control form-control-user"
-                                                id="exampleInputEmail" aria-describedby="emailHelp"
-                                                placeholder="Ingresar usuario">
+                                                placeholder="Ingresar usuario" name="u" required>
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                id="exampleInputPassword" placeholder="Contraseña">
+                                            <input type="password" class="form-control form-control-user" placeholder="Contraseña" name="p" required>
                                         </div>
-                                        <a href="main.html" class="btn btn-primary btn-user btn-block">
-                                            Ingresar
-                                        </a>
+                                        <input type="submit" class="btn btn-primary btn-user btn-block" value="Ingresar">
+                                            
+                                        
                                     </form>
                                     <hr>
                                     <div class="text-center">
