conexion base de datos
traer informaciòn de estudiante

--- a/html/sedes.html
+++ b/html/sedes.html
@@ -52,7 +52,7 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="estudiantes.html">
+                <a class="nav-link" href="estudiantes.php">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Estudiantes</span></a>
             </li>
